--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@
 .grid_number
 {
     width: 17%;
-    border: 2px solid red;
+    border: 2px solid blueviolet;
     text-align: center;
     border-radius: 23px;
     
@@ -33,4 +33,8 @@ main
     width: 60%;
     border: 2px solid red;
     height: 69vh;
+}
+.row_box
+{
+    margin: 2%;
 }
